--- a/valen/valen2.css
+++ b/valen/valen2.css
@@ -60,7 +60,7 @@
 }
 
 .facilities li .details {
-	clear: both;
+	clear: left;
 }
 
 .facilities .details > span {
@@ -104,15 +104,6 @@
 .header .semaphore {
 	font-size: 2em;
 	margin-left: 0.2em;
-	float: left; /* IE 8 */
-}
-
-.inreport {
-	/*display: block;
-	background: #fed;
-	margin-right: auto;
-	width: auto;
-	max-width: 22em;*/
 }
 
 .inreport {
@@ -137,18 +128,16 @@
 	margin: 0 0.5em 0 0.25em;
 }
 
+.bold   { font-weight: bold;  }
+
 .red    { color: #b22;        }
 .green  { color: #090;        }
 .yellow { color: #d60;        }
 .gray   { color: #aaa;        }
 
-
 .red .semaphore    { text-shadow: 0px 0px 0.2em #f66; }
 .green .semaphore  { text-shadow: 0px 0px 0.2em #0f0; }
 .yellow .semaphore { text-shadow: 0px 0px 0.2em #fa0; }
-
-
-.bold   { font-weight: bold;  }
 
 .dnsreport ul, .dnsreport li {
 	padding: 0;
@@ -162,8 +151,7 @@
 	text-align: center;
 }
 
-.status-label
-{
+.status-label {
 	color: #fff;
 	text-shadow: 0px -1px 0px #333;
 	padding: 0.5em 1em;
@@ -172,17 +160,14 @@
 
 .green .status-label {
 	background: #090;
-/* 	box-shadow: 0px 0px 4px #0f0; */
 }
 
 .yellow .status-label {
 	background: #d60;
-/* 	box-shadow: 0px 0px 4px #f80; */
 }
 
 .red .status-label {
 	background: #b22;
-/* 	box-shadow: 0px 0px 4px #f00; */
 }
 
 .gray .status-label {
