--- a/valen/valen2.css
+++ b/valen/valen2.css
@@ -113,8 +113,28 @@
 	font-size: 2em;
 }
 
-.inreport li .inname {
-	float: left;
+.instatus {
+	display: inline-block;
+	text-align: center;
+	margin: 0 1em;
+}
+
+.instatus span {
+	display: inline-block;
+}
+
+.inname {
+	background: #dcb;
+	border-radius: 2px;
+	padding: 0.2em 0.8em;
+
+	border-top-right-radius: 0 !important;
+	border-bottom-right-radius: 0 !important;
+}
+
+.instatus .status-label {
+	border-top-left-radius: 0 !important;
+	border-bottom-left-radius: 0 !important;
 }
 
 .inreport li .semaphore {
@@ -150,6 +170,10 @@
 	text-shadow: 0px -1px 0px #333;
 	padding: 0.5em 1em;
 	border-radius: 2px;
+}
+
+.instatus .status-label {
+	padding: 0.2em 0.8em;
 }
 
 .green .status-label {
