--- a/valen/valen2.css
+++ b/valen/valen2.css
@@ -98,6 +98,10 @@
 	list-style: none;
 }
 
+.inreport ul {
+	margin: 0.3em 0;
+}
+
 .inreport li {
 	display: inline;
 }
@@ -105,7 +109,7 @@
 .instatus {
 	display: inline-block;
 	text-align: center;
-	margin: 0 1em;
+	margin: 0 1.5em 0 0;
 }
 
 .instatus span {
