--- a/valen/valen2.css
+++ b/valen/valen2.css
@@ -47,6 +47,10 @@
 	padding: 0.5em 0.8em;
 	margin: 0.5em 0;
 	border-radius: 6px;
+
+	-webkit-transition: background 120ms ease;
+	-moz-transition:    background 120ms ease;
+	transition:         background 120ms ease;
 }
 
 .facilities > li:hover {
