--- a/valen/valen2.css
+++ b/valen/valen2.css
@@ -155,7 +155,9 @@
 }
 
 .status-label {
+	display: inline-block;
 	color: #fff;
+	text-align: center;
 	text-shadow: 0px -1px 0px #333;
 	padding: 0.5em 1em;
 	border-radius: 2px;
