--- a/valen/valen2.css
+++ b/valen/valen2.css
@@ -118,6 +118,7 @@
 
 .instatus span {
 	display: inline-block;
+	min-width: 2em;
 }
 
 .inname {
@@ -159,8 +160,12 @@
 	color: #fff;
 	text-align: center;
 	text-shadow: 0px -1px 0px #333;
-	padding: 0.5em 1em;
 	border-radius: 2px;
+}
+
+.header .status-label {
+	padding: 0.25em 1em;
+	min-width: 4em;
 }
 
 .instatus .status-label {
