web: Nicer site error display with extra horizontal padding

--- a/valen/valen2.css
+++ b/valen/valen2.css
@@ -150,7 +150,7 @@
 .status-report-unavailable {
 	background: #b22;
 	color: #fff;
-	padding: 1em;
+	padding: 1em 4em;
 	border-radius: 2px;
 	text-align: center;
 }
