--- a/valen/valen2.css
+++ b/valen/valen2.css
@@ -2,7 +2,7 @@
  * codename "Valen": a Wesnoth facilities status page
  * valen2.css: Basic stylesheet
  *
- * Copyright (C) 2012 - 2015 by Ignacio Riquelme Morelle <shadowm2006@gmail.com>
+ * Copyright (C) 2012 - 2017 by Ignacio R. Morelle <shadowm2006@gmail.com>
  *
  * Permission to use, copy, modify, and/or distribute this software for any
  * purpose with or without fee is hereby granted, provided that the above
@@ -31,21 +31,21 @@
 .al-center { text-align: center; }
 
 .chronology {
-	font-size: 0.78em;
+	font-size: 0.8em;
+	color: #724f2e;
 }
 
 .facilities {
 	display: block;
-	list-style: none;
-	list-style-image: none; /* IE 6 */
 	padding: 0;
 	margin: 0;
 }
 
 .facilities > li {
+	display: block;
 	clear: both;
-	padding: 0.5em 0.8em;
-	margin: 0.5em 0;
+	padding: 0.6em 0.9em;
+	margin: 0.6em 0;
 	border-radius: 6px;
 
 	-webkit-transition: background 120ms ease;
@@ -54,11 +54,11 @@
 }
 
 .facilities > li:hover {
-	background: #fed;
+	background: rgba(255,255,250,0.4); /* $glamdrol-bg */
 }
 
 .facilities li .details, .facilities li .dnsreport, .facilities li .inreport {
-	font-size: 0.85em;
+	font-size: 0.9em;
 }
 
 .facilities li .details {
@@ -88,8 +88,9 @@
 
 .facilities li .header .hostname {
 	font-weight: normal;
-	font-size: 0.8em;
-	color: #aaa;
+	font-size: 0.9em;
+	padding-left: 0.4em;
+	color: #a27f44; /* $wui-border-dark */
 	visibility: hidden;
 }
 
@@ -103,7 +104,9 @@
 }
 
 .inreport ul {
-	margin: 0.3em 0;
+	margin: 0.4em 0 0;
+	padding: 0;
+	text-align: left;
 }
 
 .inreport li {
@@ -122,9 +125,9 @@
 }
 
 .inname {
-	background: #dcb;
+	background: #e7d9c0; /* $glamdrol-darkbg */
 	border-radius: 2px;
-	padding: 0.2em 0.8em;
+	padding: 0.2em 0.9em;
 	text-shadow: 0px 1px 0px #eee;
 
 	border-top-right-radius: 0 !important;
@@ -156,7 +159,7 @@
 }
 
 .status-site-notice {
-	background: #dcb;
+	background: #e7d9c0; /* $glamdrol-darkbg */
 	padding: 1em 4em;
 	border-radius: 2px;
 	text-align: center;
@@ -171,7 +174,7 @@
 	display: inline-block;
 	color: #fff;
 	text-align: center;
-	text-shadow: 0px -1px 0px #333;
+	text-shadow: 0px -1px 0px #555;
 	border-radius: 2px;
 }
 
@@ -181,32 +184,30 @@
 }
 
 .instatus .status-label {
-	padding: 0.2em 0.8em;
+	padding: 0.2em 0.9em;
 }
 
 .green .status-label {
-	background: #090;
+	background: #295;
 }
 
 .yellow .status-label {
-	background: #d60;
+	background: #e90;
 }
 
 .red .status-label {
-	background: #b22;
+	background: #c55;
 }
 
 .gray .status-label {
-	background: #aaa;
+	background: #789;
 }
 
 #page-description-toggle {
-	font-size: 0.75em;
+	font-size: 0.8em;
 	padding-top: 2em;
 }
 
 #page-description {
-	border-bottom: solid 1px #bbb;
-	padding-bottom: 1em;
 	margin-bottom: 1em;
 }
