--- a/valen/valen2.css
+++ b/valen/valen2.css
@@ -45,7 +45,7 @@
 	display: block;
 	clear: both;
 	padding: 0.6em 0.9em;
-	margin: 0.6em 0;
+	margin: 0.6em -0.9em;
 	border-radius: 6px;
 
 	-webkit-transition: background 120ms ease;
