web: Improve styling of bad DNS report
Things I didn't properly test with Wesmere I guess.

--- a/valen/valen2.css
+++ b/valen/valen2.css
@@ -147,8 +147,10 @@ span.inname {
 .yellow { color: #d60;        }
 .gray   { color: #aaa;        }
 
-.dnsreport ul, .dnsreport li {
-	padding: 0;
+.dnslist {
+	-webkit-columns: 2;
+	-moz-columns:    2;
+	columns:         2;
 }
 
 .status-report-unavailable {
